cpp/include/cuvs/neighbors/cagra.h


enum cuvsCagraGraphBuildAlgo {
  AUTO_SELECT,
  IVF_PQ,
  NN_DESCENT,
  ITERATIVE_CAGRA_SEARCH
};
struct cuvsCagraCompressionParams {
  uint32_t pq_bits;
  uint32_t pq_dim;
  uint32_t vq_n_centers;
  uint32_t kmeans_n_iters;
  double vq_kmeans_trainset_fraction;
  double pq_kmeans_trainset_fraction;
};
typedef struct cuvsCagraCompressionParams* cuvsCagraCompressionParams_t;
struct cuvsIvfPqParams {
  cuvsIvfPqIndexParams_t ivf_pq_build_params;
  cuvsIvfPqSearchParams_t ivf_pq_search_params;
  float refinement_rate;
};
typedef struct cuvsIvfPqParams* cuvsIvfPqParams_t;
struct cuvsCagraIndexParams {
  cuvsDistanceType metric;
  size_t intermediate_graph_degree;
  size_t graph_degree;
  enum cuvsCagraGraphBuildAlgo build_algo;
  size_t nn_descent_niter;
  cuvsCagraCompressionParams_t compression;
  cuvsIvfPqParams_t graph_build_params;
};
typedef struct cuvsCagraIndexParams* cuvsCagraIndexParams_t;
cuvsError_t cuvsCagraIndexParamsCreate(cuvsCagraIndexParams_t* params);
cuvsError_t cuvsCagraIndexParamsDestroy(cuvsCagraIndexParams_t params);
cuvsError_t cuvsCagraCompressionParamsCreate(cuvsCagraCompressionParams_t* params);
cuvsError_t cuvsCagraCompressionParamsDestroy(cuvsCagraCompressionParams_t params);
struct cuvsCagraExtendParams {
  uint32_t max_chunk_size;
};
typedef struct cuvsCagraExtendParams* cuvsCagraExtendParams_t;
cuvsError_t cuvsCagraExtendParamsCreate(cuvsCagraExtendParams_t* params);
cuvsError_t cuvsCagraExtendParamsDestroy(cuvsCagraExtendParams_t params);
enum cuvsCagraSearchAlgo {
  SINGLE_CTA,
  MULTI_CTA,
  MULTI_KERNEL,
  AUTO
};
enum cuvsCagraHashMode { HASH, SMALL, AUTO_HASH };
struct cuvsCagraSearchParams {
  size_t max_queries;
  size_t itopk_size;
  size_t max_iterations;
  enum cuvsCagraSearchAlgo algo;
  size_t team_size;
  size_t search_width;
  size_t min_iterations;
  size_t thread_block_size;
  enum cuvsCagraHashMode hashmap_mode;
  size_t hashmap_min_bitlen;
  float hashmap_max_fill_rate;
  uint32_t num_random_samplings;
  uint64_t rand_xor_mask;
  bool persistent;
  float persistent_lifetime;
  float persistent_device_usage;
};
typedef struct cuvsCagraSearchParams* cuvsCagraSearchParams_t;
cuvsError_t cuvsCagraSearchParamsCreate(cuvsCagraSearchParams_t* params);
cuvsError_t cuvsCagraSearchParamsDestroy(cuvsCagraSearchParams_t params);
typedef struct {
  uintptr_t addr;
  DLDataType dtype;
} cuvsCagraIndex;
typedef cuvsCagraIndex* cuvsCagraIndex_t;
cuvsError_t cuvsCagraIndexCreate(cuvsCagraIndex_t* index);
cuvsError_t cuvsCagraIndexDestroy(cuvsCagraIndex_t index);
cuvsError_t cuvsCagraIndexGetDims(cuvsCagraIndex_t index, int64_t* dim);
cuvsError_t cuvsCagraIndexGetSize(cuvsCagraIndex_t index, int64_t* size);
cuvsError_t cuvsCagraIndexGetGraphDegree(cuvsCagraIndex_t index, int64_t* graph_degree);
cuvsError_t cuvsCagraIndexGetDataset(cuvsCagraIndex_t index, DLManagedTensor* dataset);
cuvsError_t cuvsCagraIndexGetGraph(cuvsCagraIndex_t index, DLManagedTensor* graph);
cuvsError_t cuvsCagraBuild(cuvsResources_t res,
                           cuvsCagraIndexParams_t params,
                           DLManagedTensor* dataset,
                           cuvsCagraIndex_t index);
cuvsError_t cuvsCagraExtend(cuvsResources_t res,
                            cuvsCagraExtendParams_t params,
                            DLManagedTensor* additional_dataset,
                            cuvsCagraIndex_t index);
cuvsError_t cuvsCagraSearch(cuvsResources_t res,
                            cuvsCagraSearchParams_t params,
                            cuvsCagraIndex_t index,
                            DLManagedTensor* queries,
                            DLManagedTensor* neighbors,
                            DLManagedTensor* distances,
                            cuvsFilter filter);
cuvsError_t cuvsCagraSerialize(cuvsResources_t res,
                               const char* filename,
                               cuvsCagraIndex_t index,
                               bool include_dataset);
cuvsError_t cuvsCagraSerializeToHnswlib(cuvsResources_t res,
                                        const char* filename,
                                        cuvsCagraIndex_t index);
cuvsError_t cuvsCagraDeserialize(cuvsResources_t res, const char* filename, cuvsCagraIndex_t index);
cuvsError_t cuvsCagraIndexFromArgs(cuvsResources_t res,
                                   cuvsDistanceType metric,
                                   DLManagedTensor* graph,
                                   DLManagedTensor* dataset,
                                   cuvsCagraIndex_t index);